plugins {
    id 'java'
    id 'groovy'
}

group = 'com.jake'
version = '0.0.1-SNAPSHOT'
description = 'message-system'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

allprojects {
    repositories {
        mavenCentral()
        maven { url = 'https://repo.spring.io/snapshot' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'

    dependencies {
        testImplementation 'org.spockframework:spock-core:2.4-M5-groovy-4.0'
        testImplementation 'org.spockframework:spock-spring:2.4-M5-groovy-4.0'
        testImplementation 'net.bytebuddy:byte-buddy:1.16.1'
        testImplementation 'org.objenesis:objenesis:3.4'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'com.h2database:h2'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        jvmArgs '-Xshare:off'
    }
}